# NiFiMCP

./: .env.example  .gitignore  README.md  claude_desktop_config.json  config.example.yaml  logging_config.yaml  main.py  pyproject.toml  requirements.txt  run_mcp_server.py  run_sse_server.py  run_stdio_server.py  test_logging.py
config/: logging_setup.py  settings.py
docs/: Auto-Stop and other features.md  AutomatedTestPlan.md  Claude_Desktop_Setup.md  ControllersImplementationPlan.md  DebuggingToolsPlan.md  ExampleConversation.md  GuidedWorkflowImplementationPlan.md  ImplementationPlan.md  LoggingImplementationPlan.md  MCP_Wrapper_Guide.md  NiFi_MCP_Tool_Optimization_Plan.md  REPOSITORY_STRUCTURE.md  SSE_Server_Guide.md  Server_Comparison.md  Timeout_Optimization_Summary.md  Tool_DocumentNiFiFlow.md  UIImplementationPlan.md  UsageGuide.md
docs/examples/: ExampleConversation-Build-o4-mini.md  ExampleConversationForDebugging.md
examples/: ExampleConversation-Build-o4-mini.md  ExampleConversation.md  ExampleConversationForDebugging.md  timeout_handling_example.py
nifi_chat_ui/: app.py  async_workflow_ui.py  chat_manager.py  chat_manager_compat.py  config.py  mcp_handler.py  requirements.txt  system_prompt.md
nifi_mcp_client/: client.py
nifi_mcp_server/: core.py  fastmcp_sse_server.py  flow_documenter.py  flow_documenter_improved.py  mcp_wrapper.py  nifi_client.py  nifi_client.py.bak  request_context.py  server.py  server.py.bak  sse_server.py
tests/: README.md  cleanup_test_pgs.py  conftest.py  test_nifi_tools.py  test_sse_server.py
tests/unit/: conftest.py  (+1 more)
(+71 files in other folders)
