[project]
name = "nifimcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.15.2",
    "PyYAML>=6.0",
    "loguru>=0.7.0",
    "streamlit>=1.30.0",
    "google-generativeai>=0.4.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "docstring_parser>=0.16"
]

[tool.setuptools]
packages = ["config", "nifi_chat_ui", "nifi_mcp_client", "nifi_mcp_server"]
